# rp2040-guitar-tuner

./: .gitignore  CMakeLists.txt  README.md
src/: lcd1602_i2c.c  lcd1602_i2c.h  main.c
